[project]
name = "ComfyUI-QwenVL"
description = "ComfyUI-QwenVL custom node: Integrates the Qwen-VL series, including Qwen2.5-VL and the latest Qwen3-VL, to enable advanced multimodal AI for text generation, image understanding, and video analysis."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["transformers>=4.40.0", "torch", "huggingface-hub", "psutil", "numpy", "Pillow", "opencv-python", "bitsandbytes","accelerate"]

[project.urls]
Repository = "https://github.com/1038lab/ComfyUI-QwenVL"

[tool.comfy]
PublisherId = "ailab"
DisplayName = "ComfyUI-QwenVL"
Icon = ""